Web Config of service

--- a/Web.config
+++ b/Web.config
@@ -2,7 +2,7 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=publictoken" requirePermission="false" />
   </configSections>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -10,7 +10,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
-        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=publictoken" />
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5" />
@@ -54,7 +54,7 @@
     <directoryBrowse enabled="true" />
   </system.webServer>
   <connectionStrings>
-    <add name="Jaineelsql2012Entities1" connectionString="metadata=res://*/Model.EstimateModel1.csdl|res://*/Model.EstimateModel1.ssdl|res://*/Model.EstimateModel1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JAINEEL-VAIO\SQL2012;initial catalog=Jaineelsql2012;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Jaineelsql2012Entities1" connectionString="metadata=res://*/Model.EstimateModel1.csdl|res://*/Model.EstimateModel1.ssdl|res://*/Model.EstimateModel1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=datasource;initial catalog=database;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
